# gas-kiln-pi

./: .gitignore  README.md  SAFETY.md  config.yaml  pyproject.toml  requirements-pi.txt  requirements.txt
docs/: WIRING.md  make_wiring_diagram.py
kiln_controller/: __init__.py  config.py  controller.py  state.py
kiln_controller/control/: __init__.py  pid.py  profile.py
kiln_controller/hardware/: __init__.py  actuator.py  thermocouple.py  valve.py
kiln_controller/safety/: __init__.py  heartbeat.py  limits.py  watchdog.py
kiln_controller/web/: __init__.py  app.py
kiln_controller/web/templates/: index.html
scripts/: run_controller.py  run_dashboard.py  run_watchdog.py
systemd/: kiln-controller.service  kiln-dashboard.service  kiln-watchdog.service
tests/: test_controller.py  test_damper.py  test_pid.py  test_profile.py  test_safety.py  test_servo_valve.py
