[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-kiln-pi"
version = "0.1.0"
description = "Raspberry Pi PID controller and dashboard for a gas-fired kiln"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "Flask>=3.0"]

[project.scripts]
kiln-controller = "kiln_controller.controller:main"
kiln-watchdog = "kiln_controller.safety.watchdog:main"
kiln-dashboard = "kiln_controller.web.app:main"

[tool.setuptools.packages.find]
include = ["kiln_controller*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
